--- a/src/scenes/scene.css
+++ b/src/scenes/scene.css
@@ -3,3 +3,38 @@ canvas {
   top: 0;
   left: 0;
 }
+
+#gui {
+  position: fixed;
+  z-index: 5;
+}
+
+#gui button {
+  display: inline-block;
+  width: 150px;
+  height: 50px;
+  margin: 50px;
+  font-size: 20px;
+}
+
+#loader {
+  border: 5px solid #f3f3f3; /* Light grey */
+  border-top: 5px solid #3d3d3d; /* Grey */
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 2;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
